--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-horizontal-scrolling-menu": "^2.7.1",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^6.0.0-0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
   },
